--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
     <div class="container" style="margin-top: -50px">
       <h5 class="grey-text center-align text-darken-3">
-        🎁 50% OFF SALE 🎁 Jazmin 🐉
+        🎁 50% OFF SALE 🎁 JAZMIN 🐉
       </h5>
       <div class="center-align grey-text text-darken-3">
         <ul class="">
